--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -67,6 +67,7 @@
     console.count('Wes');
     console.count('Steve');
     console.count('Steve');
+    console.count('Wes');
 
     // timing
     console.time('fetching data');
