--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -22,14 +22,85 @@
     <form class="add-items">
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
+      <br>
+      <input type="button" name="clear" value="Clear List">
+      <input type="button" name="check-all" value="Check All">
+      <input type="button" name="uncheck-all" value="Uncheck All">
     </form>
   </div>
 
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
+  const clear = document.querySelector('[name=clear]');
+  const checkAll = document.querySelector('[name=check-all]');
+  const uncheckAll = document.querySelector('[name=uncheck-all');
 
+  function addItem(e) {
+    e.preventDefault();
+    const text = (this.querySelector('[name=item]')).value;
+    const item = {
+      text,
+      done: false
+    };
+    
+    items.push(item);
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+    this.reset();
+  }
+
+  function populateList(plates = [], platesList) {
+    platesList.innerHTML = plates.map((plate, i) => {
+      return`
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+          <label for="item${i}">${plate.text}</label>
+        </li>
+      `;
+    }).join('');
+  }
+
+  function toggleDone(e) {
+    if (!e.target.matches('input')) return;
+    // console.log(e.target);
+    const el = e.target;
+    // console.log(el.dataset.index);
+    const index = el.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  function clearList() {
+    localStorage.removeItem('items');
+    location = location;
+  }
+
+  function checkAllBoxes() {
+    items.forEach(element => {
+      element.done = true;
+    });
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  function uncheckAllBoxes() {
+    items.forEach(element => {
+      element.done = false;
+    });
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
+  clear.addEventListener('click', clearList);
+  checkAll.addEventListener('click', checkAllBoxes);
+  uncheckAll.addEventListener('click', uncheckAllBoxes);
+
+  populateList(items, itemsList);
 </script>
 
 
