--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -25,6 +25,7 @@
       <textarea name="text">Hello! I love JavaScript 👍</textarea>
       <button id="stop">Stop!</button>
       <button id="speak">Speak</button>
+      <button id="english">All Voices</button>
 
     </div>
 
@@ -35,6 +36,66 @@
   const options = document.querySelectorAll('[type="range"], [name="text"]');
   const speakButton = document.querySelector('#speak');
   const stopButton = document.querySelector('#stop');
+  const voiceButton = document.querySelector('#english');
+  let eng = true;
+  
+  msg.text = document.querySelector('[name=text]').value;
+
+  function populateVoices() {
+    voices = speechSynthesis.getVoices();
+    if (eng) {
+    voicesDropdown.innerHTML = voices
+      .filter(voice => voice.lang.includes('en'))
+      .map(voice => `<option value="${voice.name}">${voice.name} (${voice.lang})</option>`)
+      .join('');
+    } else {
+    voicesDropdown.innerHTML = voices
+      .map(voice => `<option value="${voice.name}">${voice.name} (${voice.lang})</option>`)
+      .join('');
+    }
+  }
+
+  function setVoice() {
+     msg.voice = voices.find(voice => voice.name === this.value);
+     toggle();
+  }
+
+  function toggle(startOver = true) {
+    speechSynthesis.cancel();
+    if (startOver) {
+      speechSynthesis.speak(msg);
+    }
+  }
+
+  function setOption() {
+    console.log(this.name, this.value);
+    msg[this.name] = this.value;
+    toggle();
+  }
+
+  function styleButton() {
+    if (eng) {
+      voiceButton.innerHTML = 'All Voices';
+    } else {
+      voiceButton.innerHTML = 'English Voices';
+    }
+  }
+
+  function toggleEnglish() {
+      eng = !eng;
+      console.log(eng);
+      populateVoices();
+      msg.voice = voices.find(voice => voice.name === this.value);
+      styleButton();
+  }
+
+  speechSynthesis.addEventListener('voiceschanged', populateVoices);
+  voicesDropdown.addEventListener('change', setVoice);
+  options.forEach(option => option.addEventListener('change', setOption));
+  speakButton.addEventListener('click', toggle);
+  stopButton.addEventListener('click', () => toggle(false));
+  voiceButton.addEventListener('click', toggleEnglish);
+
 </script>
 
 </body>
